Fixed searchbar spacing

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -31,14 +31,15 @@ body {
 #searchbar > input {
 	width: 100%;
 	height: 40pt;
+	padding: 0;
 	color: white;
 	background-color: transparent;
 	text-align: center;
 	font-size: 20pt;
 	font-family: "Jura";
-	border-color: transparent;
-	border-bottom: solid 2px white;
-	margin-bottom: 10px;
+	border: none;
+	border-bottom: 2px solid white;
+	outline: none;
 	/* Attempt to make text fade from left and right side */
 	/* mask-image: linear-gradient(to right, rgba(255, 255, 255, 1) 49%, rgba(255, 255, 255, 0) 100%); */
 }
@@ -46,7 +47,7 @@ body {
 #time {
 	font-family: "Jura";
 	font-size: 16pt;
-	padding-top: 5px;
+	padding-top: 15px;
 }
 
 #services {
